# phenosaurus

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  GNUmakefile.in  LICENSE  README.md  aclocal.m4  babel.config.js  configure  configure.ac  db-schema.sql  package.json  questions.txt  todo.txt  webpack.config.js
cmake/: AddGitSubmodule.cmake
config/m4/: ax_libzeep.m4
docroot/: admin-groups.html  admin-screens.html  admin-users.html  compare-3.html  contextMenu.html  create-screen.html  edit-screen.html  edit-screens.html  error.html  find-clusters.html  find-genes.html  find-similar.html  fishtail.html  footer.html  gene-finder.html  gene-info.html  gene-selection.html  geneinfo.html  genome-browser.html  head.html  index.html  list-screens.html  login.html  menu.html  qc.html  reset-password.html  sl-screen.html  user-screens.html
docroot/css/: styles.css
rsrc/: ranked.txt  refSeqs.json  reset-password-mail.txt  version.txt
scss/: contextMenu.css  sa-style.scss  styles.css
src/: adjust.cpp  binom.cpp  binom.hpp  bowtie.cpp  bowtie.hpp  bsd-closefrom.c  bsd-closefrom.h  builder.cpp  config.hpp.in  db-connection.cpp  db-connection.hpp  fisher.cpp  fisher.hpp  genome-browser.cpp  genome-browser.hpp  job-scheduler.cpp  job-scheduler.hpp  mrsrc.h  refann.hpp  refannb.cpp  refseq.cpp  refseq.hpp  revision.hpp.in  screen-analyzer.cpp  screen-analyzer.hpp  screen-creator.cpp  screen-creator.hpp  screen-data.cpp  screen-data.hpp  screen-qc.cpp  screen-qc.hpp  screen-server.cpp  screen-server.hpp  screen-service.cpp  screen-service.hpp  screendata.cpp  screendata.hpp  screenserver.cpp  screenserver.hpp  user-service.cpp  (+3 more)
src/sq/: squeeze.hpp
webapp/: admin-group.js  admin-screen.js  admin-user.js  cluster-finder.js  compare-3.js  context-menu.js  contextMenu.js  create-screen.js  dot-context-menu.js  dot.js  edit-screen.js  find-similar.js  finder.js  gene-finder.js  gene-selection.js  geneFinder.js  geneInfo.js  genome-browser.js  genome-viewer.js  index.js  list-screen.js  multidot.js  pvformat.js  qc.js  screen-creator.js  screen-editor.js  screen.js  screenColorMap.js  screenData.js  screenPlot.js  script.js  similar-finder.js  sl-dot.js  sl-screen.js  sortable.js  tooltip.js  user-screen.js
